Rename site from 'yohan123.bin' to 'Segmentation fault'
Updated all references to 'yohan123.bin' in HTML and XML files to 'Segmentation fault'. This includes titles, meta tags, links, and site names to reflect the new site identity.

--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
 	<head lang="en">
 	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>yohan123.bin | Home </title><meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>Segmentation fault | Home </title><meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta property="og:image" content=""/>
-	<link rel="alternate" type="application/rss+xml" href="https://dygma0.github.io/index.xml" title="yohan123.bin" />
+	<link rel="alternate" type="application/rss+xml" href="https://dygma0.github.io/index.xml" title="Segmentation fault" />
 	<meta property="og:url" content="https://dygma0.github.io/">
-  <meta property="og:site_name" content="yohan123.bin">
-  <meta property="og:title" content="yohan123.bin">
+  <meta property="og:site_name" content="Segmentation fault">
+  <meta property="og:title" content="Segmentation fault">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="yohan123.bin">
+  <meta name="twitter:title" content="Segmentation fault">
 
 	
         <link href="https://dygma0.github.io/css/fonts.2c2227b81b1970a03e760aa2e6121cd01f87c88586803cbb282aa224720a765f.css" rel="stylesheet">
@@ -35,7 +35,7 @@
 		<div class="content">
 			<header>
 	<div class="main">
-		<a href="https://dygma0.github.io/">yohan123.bin</a>
+		<a href="https://dygma0.github.io/">Segmentation fault</a>
 	</div>
 	<nav>
 		
