Enhance readability of post on DDD by refining text
Revised the content to improve clarity and coherence, particularly by restructuring sentences and refining the terminology used. This aims to provide a better reading experience and a clearer understanding of the key concepts discussed in the article.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<blockquote>
 <p>블라드 코노노프 지음의 &ldquo;도메인 주도 설계 첫걸음&quot;을 읽고 정리한 글입니다.</p>
 </blockquote>
-<p>회사를 이직하고, 제품의 기획이 내부가 아닌 외부에 의해 좌우되는 경험을 종종 하고 있다. 물론 이전 회사에서도 다양한 사용자의 의견을 들으며 제품을 개발해 나갔지만, 어디까지나 회사의 방향성과 맞고, 현재 설계에서 구현이 가능한 수준에서 최선의 대안을 선택하는 반면, 공공교육의 경우 그 조건이 강하다고 생각할 수 있다. 예를 들어서 시각 장애인 학생이 학습에 어려울 수 있으니 수정하라고 한다면 지금까지 만들어진 모든 콘텐츠 및 개발 기능에 대해서 변경이 필요하게 된다. 이럴 때마다 백엔드 개발자의 입장에선 각 도메인 모델과 관계성이 변경되면 코드의 구조가 크게 흔들리게 된다.</p>&hellip;
+<p>회사를 이직한 이후, 제품 기획이 내부적인 의사 결정이 아니라 외부 요인에 의해 좌우되는 경험을 자주 하고 있다. 이전 회사에서도 다양한 사용자 의견을 수렴하여 제품을 개발했지만, 그 과정은 어디까지나 회사의 방향성과 일치하고 현재 설계된 시스템 내에서 구현이 가능한 수준에서 최선의 대안을 선택하는 방식이었다. 그러나 공공교육 분야에서는 이러한 외부 요인의 영향이 더 강하게 작용한다고 볼 수 있다. 예를 들어, 시각 장애가 있는 학생이 학습에 어려움을 겪을 수 있으므로 접근성을 개선하라는 요청이 들어올 경우, 지금까지 제작된 모든 콘텐츠와 개발된 기능에 대한 전면적인 수정이 필요하게 된다.</p>&hellip;
 	
 </div>
 					<a class="readmore" href="/posts/ddd-first-step/">Read more ⟶</a>
